src/test/deca/syntax/valid/divide_floatvar_float_divide_float.deca
// Description :
//
//      Test syntaxiquement correct de la division d'un float et d'un float dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y= 3.5 /  2.7;
}