src/test/deca/syntax/invalid/class_new_this.deca
// Description :
// 
//      Test incorrect utilisant un new this
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 19/06/2023 par gl03


class this {
    
}

{
    this A = new this;
}